gcc/testsuite/rust/rustc/ui/parser/diff-markers/struct_dg.rs
struct S {
<<<<<<< HEAD // { dg-error "" "" { target *-*-* } }
    x: u8,
=======
    x: i8,
>>>>>>> branch
}

